# Axiom-N1

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: coder_n1_64b.yaml  dev.yaml  distill_providers.example.json  local_8gb_16gb.yaml  local_8gb_gate_short.yaml  tiny.yaml  tiny_learning.yaml  tiny_unit.yaml
data/: README.md
docs/: ARCHITECTURE_CN.md  DIALOGUE_CORPUS_SOURCES.md  GITHUB_RELEASE_CHECKLIST.md  STAGES.md  STRICT_ALIGNMENT.md  dialogue_source_notes.md  distill_api_setup.md
scripts/: annotate_gate_supervision.py  check_alignment.py  check_env.py  check_kernel.py  clean_dialogue_corpus.py  distill_dialogue.py  estimate_memory.py  evaluate.py  export_cold_blocks.py  final_train.py  generate.py  generate_language_distill_seeds.py  generate_skeleton_tasks.py  inspect_model.py  install_deps.ps1  make_toy_data.py  migrate_dialogue_runs.py  prepare_data.py  report.py  selfplay_dialogue.py  smoke_torch.py  train.py  train_stages.py  writeback_cold_units.py
tests/: test_alignment_gate.py  test_anti_hallucination_model.py  test_api_distill.py  test_attention_backend.py  test_clean_dialogue_corpus_cli.py  test_cognitive_memory_integration.py  test_config.py  test_deliberation.py  test_deliberation_model.py  test_dialogue_cleaner.py  test_dspark.py  test_dspark_model.py  test_final_pipeline.py  test_gate_supervision_annotation.py  test_generate_language_distill_seeds.py  test_hot_orchestration_training.py  test_hra.py  test_inductive_learning.py  test_knowledge_management_stage.py  test_kv_cache.py  (+15 more)
(+45 files in other folders)
