[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom-n1"
version = "0.1.0"
description = "Axiom N1 from-scratch hot/cold code-model architecture implementation."
requires-python = ">=3.10"
dependencies = [
  "torch>=2.3",
  "numpy>=1.24",
  "pyyaml>=6.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]
tokenizer = ["sentencepiece>=0.2"]
corpus = ["datasets>=5.0", "pyarrow>=24.0"]
kernel = [
  "triton-windows>=3.7; platform_system == 'Windows'",
  "triton>=2.3; platform_system != 'Windows'",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
